Added javadocs to classes that had missing or no javadocs