@@ -15,7 +15,12 @@ import java.util.List;
 import java.util.Random;
 import java.util.stream.Collectors;
 
+/**
+ * The BackgroundMusicSystem handles the playback of background music tracks in the game.
+ * It supports features like shuffle mode, preventing immediate repeats, and volume control.
+ */
 public class BackgroundMusicSystem extends GameSystem {
+
     private Clip currentClip;
     private LineListener currentListener;
     private BackgroundMusic lastPlayed;
@@ -25,11 +30,18 @@ public class BackgroundMusicSystem extends GameSystem {
     private List<BackgroundMusic> playQueue = new ArrayList<>();
     private final Object playbackLock = new Object();
 
+    /**
+     * Starts the system. The system becomes active and begins to check for music playback.
+     */
     @Override
     public void start() {
         this.active = true;
     }
 
+    /**
+     * Updates the system by checking the status of the current clip and playing a new track if necessary.
+     * This is called every game loop iteration.
+     */
     @Override
     protected void update() {
         synchronized (playbackLock) {
@@ -43,10 +55,19 @@ public class BackgroundMusicSystem extends GameSystem {
         }
     }
 
+    /**
+     * Determines whether a new track should be played.
+     * A new track is played if there is no current clip or if the current clip is not playing or not open.
+     *
+     * @return true if a new track should be played, false otherwise
+     */
     private boolean shouldPlayNewTrack() {
         return currentClip == null || !currentClip.isOpen() || !currentClip.isActive();
     }
 
+    /**
+     * Selects and plays the next music track from the available music list.
+     */
     private void playNextMusic() {
         synchronized (playbackLock) {
             BackgroundMusicStore store = BackgroundMusicStore.getInstance();
@@ -62,6 +83,12 @@ public class BackgroundMusicSystem extends GameSystem {
         }
     }
 
+    /**
+     * Filters and returns the list of available music tracks to play based on the current settings.
+     *
+     * @param store the BackgroundMusicStore containing all music tracks
+     * @return a list of available music tracks
+     */
     private List<BackgroundMusic> getAvailableMusicList(BackgroundMusicStore store) {
         List<BackgroundMusic> allMusic = store.getBackgroundMusics();
 
@@ -73,6 +100,12 @@ public class BackgroundMusicSystem extends GameSystem {
         return new ArrayList<>(allMusic);
     }
 
+    /**
+     * Selects a music track to play. It can either pick randomly (shuffle mode) or follow the play queue.
+     *
+     * @param availableMusic the list of available music tracks to choose from
+     * @return the selected music track
+     */
     private BackgroundMusic selectMusic(List<BackgroundMusic> availableMusic) {
         if (shuffleMode) {
             return availableMusic.get(random.nextInt(availableMusic.size()));
@@ -80,14 +113,22 @@ public class BackgroundMusicSystem extends GameSystem {
             if (playQueue.isEmpty()) {
                 playQueue.addAll(availableMusic);
             }
-            return playQueue.removeFirst();
+            return playQueue.remove(0); // Pop the first item from the queue
         }
     }
 
+    /**
+     * Plays the selected background music.
+     *
+     * @param music the background music to play
+     */
     private void playMusic(BackgroundMusic music) {
         synchronized (playbackLock) {
-            try { Thread.sleep(30); }
-            catch (InterruptedException e) { Thread.currentThread().interrupt(); }
+            try {
+                Thread.sleep(30);
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
 
             String path = music.getPath();
             Clip clip = ResourceHub.getInstance().getResourceManager(Clip.class).get(path);
@@ -128,6 +169,9 @@ public class BackgroundMusicSystem extends GameSystem {
         }
     }
 
+    /**
+     * Cleans up the current music clip by stopping it and removing any listeners.
+     */
     private void cleanupCurrentClip() {
         synchronized (playbackLock) {
             if (currentClip != null) {
@@ -150,10 +194,22 @@ public class BackgroundMusicSystem extends GameSystem {
         }
     }
 
+    /**
+     * Checks if the provided clip is valid and ready for playback.
+     *
+     * @param clip the clip to check
+     * @return true if the clip is valid, false otherwise
+     */
     private boolean isValidClip(Clip clip) {
         return clip != null && clip.isOpen() && clip.getBufferSize() > 0;
     }
 
+    /**
+     * Sets the volume of the given clip.
+     *
+     * @param clip the clip to adjust the volume for
+     * @param volume the volume level to set (0.0 to 1.0)
+     */
     private void setVolume(Clip clip, float volume) {
         if (!isValidClip(clip)) return;
 
@@ -174,6 +230,12 @@ public class BackgroundMusicSystem extends GameSystem {
     }
 
     // Public control methods
+
+    /**
+     * Sets whether shuffle mode is enabled for music playback.
+     *
+     * @param shuffle true to enable shuffle mode, false to disable it
+     */
     public void setShuffleMode(boolean shuffle) {
         synchronized (playbackLock) {
             this.shuffleMode = shuffle;
@@ -181,18 +243,29 @@ public class BackgroundMusicSystem extends GameSystem {
         }
     }
 
+    /**
+     * Sets whether to prevent immediate repeats of the last played track.
+     *
+     * @param prevent true to prevent immediate repeats, false to allow them
+     */
     public void setPreventImmediateRepeats(boolean prevent) {
         synchronized (playbackLock) {
             this.preventImmediateRepeats = prevent;
         }
     }
 
+    /**
+     * Stops the current background music.
+     */
     public void stopMusic() {
         synchronized (playbackLock) {
             cleanupCurrentClip();
         }
     }
 
+    /**
+     * Pauses the current background music.
+     */
     public void pauseMusic() {
         synchronized (playbackLock) {
             if (isValidClip(currentClip) && currentClip.isRunning()) {
@@ -201,6 +274,9 @@ public class BackgroundMusicSystem extends GameSystem {
         }
     }
 
+    /**
+     * Resumes the current background music if it was paused.
+     */
     public void resumeMusic() {
         synchronized (playbackLock) {
             if (isValidClip(currentClip) && !currentClip.isRunning()) {
@@ -209,6 +285,11 @@ public class BackgroundMusicSystem extends GameSystem {
         }
     }
 
+    /**
+     * Checks if music is currently playing.
+     *
+     * @return true if music is playing, false otherwise
+     */
     public boolean isPlaying() {
         synchronized (playbackLock) {
             return isValidClip(currentClip) && currentClip.isRunning();
